--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a href="faqs.html"><button id="login-btn">Explore Now</button></a>
             </div>
             <video autoplay muted loop id="myVideo">
-                <source src="4K_Trim.mp4" type="video/mp4">
+                <source src="4k-trim_EZhdfT3O.mp4" type="video/mp4">
               </video>
         </section>
     </main>
