--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <img src="fashion.png" alt="celeb.ai Logo"> 
             </div>
             <ul>
-                <!-- <li><a href="#">Home</a></li> -->
+                <li><a href="#">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
