--- a/static/carryminati.html
+++ b/static/carryminati.html
@@ -55,7 +55,7 @@
             messageInput.value = '';
 
             try {
-                const response = await fetch('http://localhost:5003', {
+                const response = await fetch('/carryminati', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
