--- a/static/pewdiepie.html
+++ b/static/pewdiepie.html
@@ -55,7 +55,7 @@
             messageInput.value = '';
 
             try {
-                const response = await fetch('http://localhost:2982', {
+                const response = await fetch('/pewdiepeie', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
