--- a/static/ronaldo.html
+++ b/static/ronaldo.html
@@ -55,7 +55,7 @@
             messageInput.value = '';
 
             try {
-                const response = await fetch('http://localhost:2992', {
+                const response = await fetch('/ronaldo', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
