--- a/static/salmankhan.html
+++ b/static/salmankhan.html
@@ -55,7 +55,7 @@
             messageInput.value = '';
 
             try {
-                const response = await fetch('http://localhost:2990', {
+                const response = await fetch('/salmankhan', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
