--- a/static/shahrukhkhan.html
+++ b/static/shahrukhkhan.html
@@ -55,7 +55,7 @@
             messageInput.value = '';
 
             try {
-                const response = await fetch('http://localhost:3002', {
+                const response = await fetch('/shahrukhkhan', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
