--- a/static/stevejobs.html
+++ b/static/stevejobs.html
@@ -55,7 +55,7 @@
             messageInput.value = '';
 
             try {
-                const response = await fetch('http://localhost:3000', {
+                const response = await fetch('/stevejobs', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
