--- a/static/tanmaybhatt.html
+++ b/static/tanmaybhatt.html
@@ -55,7 +55,7 @@
             messageInput.value = '';
 
             try {
-                const response = await fetch('http://localhost:3004', {
+                const response = await fetch('/tanmaybhat', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
