--- a/static/viratkohli.html
+++ b/static/viratkohli.html
@@ -55,7 +55,7 @@
             messageInput.value = '';
 
             try {
-                const response = await fetch('http://localhost:2995', {
+                const response = await fetch('/viratkohli', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
