--- a/static/amitabhbachan.html
+++ b/static/amitabhbachan.html
@@ -56,7 +56,7 @@
             messageInput.value = '';
 
             try {
-                const response = await fetch('http://localhost:5000', {
+                const response = await fetch('/amitabhbachan', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
