--- a/static/deepikapad.html
+++ b/static/deepikapad.html
@@ -55,7 +55,7 @@
             messageInput.value = '';
 
             try {
-                const response = await fetch('http://localhost:5004', {
+                const response = await fetch('/deepikapad', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
