--- a/static/dwaynejohnson.html
+++ b/static/dwaynejohnson.html
@@ -55,7 +55,7 @@
             messageInput.value = '';
 
             try {
-                const response = await fetch('http://localhost:5007', {
+                const response = await fetch('/dwaynejohnson', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
