--- a/static/edsheeran.html
+++ b/static/edsheeran.html
@@ -55,7 +55,7 @@
             messageInput.value = '';
 
             try {
-                const response = await fetch('http://localhost:5008', {
+                const response = await fetch('/edsheeran', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
