--- a/static/elonmusk.html
+++ b/static/elonmusk.html
@@ -55,7 +55,7 @@
             messageInput.value = '';
 
             try {
-                const response = await fetch('http://localhost:2999', {
+                const response = await fetch('/elonmusk', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
