--- a/static/honeysingh.html
+++ b/static/honeysingh.html
@@ -55,7 +55,7 @@
             messageInput.value = '';
 
             try {
-                const response = await fetch('http://localhost:2984', {
+                const response = await fetch('/honeysingh', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
