--- a/static/justinbeiber.html
+++ b/static/justinbeiber.html
@@ -55,7 +55,7 @@
             messageInput.value = '';
 
             try {
-                const response = await fetch('http://localhost:2985', {
+                const response = await fetch('/justinbeiber', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
