--- a/static/magnuscarl.html
+++ b/static/magnuscarl.html
@@ -55,7 +55,7 @@
             messageInput.value = '';
 
             try {
-                const response = await fetch('http://localhost:2993', {
+                const response = await fetch('/magnuscarl', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
