--- a/static/mrbeast.html
+++ b/static/mrbeast.html
@@ -55,7 +55,7 @@
             messageInput.value = '';
 
             try {
-                const response = await fetch('http://localhost:2983', {
+                const response = await fetch('/mrbeast', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
