--- a/static/msdhoni.html
+++ b/static/msdhoni.html
@@ -55,7 +55,7 @@
             messageInput.value = '';
 
             try {
-                const response = await fetch('http://localhost:3001', {
+                const response = await fetch('/msdhoni', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
