--- a/static/vishyanand.html
+++ b/static/vishyanand.html
@@ -55,7 +55,7 @@
             messageInput.value = '';
 
             try {
-                const response = await fetch('http://localhost:2994', {
+                const response = await fetch('/vishyanand', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
