--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
     <title>Celeb.ai - Main Page</title>
     <link rel="icon" href="fashion.png" type="image/png">
     <link rel="stylesheet" href="main.css">
-    <style> body{
+    <style> .body{
         background-color: black;
     }</style>
 </head>
