--- a/static/index.html
+++ b/static/index.html
@@ -7,9 +7,11 @@
     <title>Celeb.ai - Main Page</title>
     <link rel="icon" href="fashion.png" type="image/png">
     <link rel="stylesheet" href="main.css">
-    <style> .body{
+    <style> 
+        .body{
         background-color: black;
-    }</style>
+    }
+    </style>
 </head>
 <body>
     <header>
@@ -32,9 +34,7 @@
                 <p>Discover the world of your favorite celebrities!</p>
                 <a href="faqs.html"><button id="login-btn">Explore Now</button></a>
             </div>
-<!--             <video autoplay muted loop id="myVideo">
-                <source src="4k-trim_EZhdfT3O.mp4" type="video/mp4">
-              </video> -->
+
         </section>
     </main>
 
