--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="main.css">
     <style> 
         .body{
-        background-color: black;
+        background-color: #000000;
     }
     </style>
 </head>
