--- a/static/index.html
+++ b/static/index.html
@@ -100,8 +100,8 @@
                   
                   <div class="social-icons">
                     <h3>Follow Us</h3>
-                    <a href="#"><img src="linkedin.png" alt="Facebook"></a>
-                    <a href="#"><img src="instagram.png" alt="Instagram"></a>
+                    <a href="https://www.linkedin.com/in/darshan-laljani"><img src="linkedin.png" alt="Facebook"></a>
+                    <a href="https://www.instagram.com/darshanlaljani/"><img src="instagram.png" alt="Instagram"></a>
                     <p>&copy; 2023 Celeb.AI. All rights reserved.</p>
                   </div>
                   
